--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,33 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WIEM</title>
+</head>
 <body>
-<p>Welcome to WIEM</p>
+    <!-- <img src="{{ url_for('static', filename='images/test.jpg') }}" class="image" /> -->
+    <nav class="nav--bar">
+        <div class="logo">
+            <img src="#"/>
+            <p>Weather Station</p>
+        </div>
+        <div class="nav-links">
+            <p>Home</p>
+        </div>
+        <div class="time">
+            <p>09:46 AM</p>
+        </div>
+        <div class="date">
+            <p>29 Dec 2023</p>
+        </div>
+        <div class="greetings">
+            <p>Hey! Ghana</p>
+        </div>
+        <div class="search">
+            <input type="search" placeholder="type a city...">
+        </div>
+    </nav>
 </body>
 </html>
