--- a/static/styles.css
+++ b/static/styles.css
@@ -17,6 +17,8 @@ body {
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);
     width: 100%;
     height: 100vh;
+    font-family: 'Raleway', sans-serif;
+    color: #fff;
 }
 
 .nav--bar {
@@ -30,4 +32,29 @@ body {
 .logo {
     display: flex;
     gap: .5em;
+}
+.time--date{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 3em;
+}
+
+.aside {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+}
+.search input {
+    width: 300px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 6px;
+    backdrop-filter: blur(10px);
+    padding: .5em;
+    outline: none;
+    border-style: none;
+    border: 1px solid #09d15c;
 }
