--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WIEM</title>
@@ -13,21 +16,25 @@
             <img src="#"/>
             <p>Weather Station</p>
         </div>
-        <div class="nav-links">
-            <p>Home</p>
+        <!-- <div class="nav-links">
+            <p>Home</p> -->
         </div>
-        <div class="time">
-            <p>09:46 AM</p>
-        </div>
-        <div class="date">
-            <p>29 Dec 2023</p>
-        </div>
-        <div class="greetings">
-            <p>Hey! Ghana</p>
-        </div>
-        <div class="search">
-            <input type="search" placeholder="type a city...">
-        </div>
+        <section class="time--date">
+            <div class="time">
+                <p>09:46 AM</p>
+            </div>
+            <div class="date">
+                <p>29 Dec 2023</p>
+            </div>
+        </section>
+        <section class="aside">
+            <div class="greetings">
+                <p>Hey! Ghana</p>
+            </div>
+            <div class="search">
+                <input type="search" placeholder="type a city...">
+            </div>
+        </section>
     </nav>
 </body>
 </html>
