--- a/templates/index.html
+++ b/templates/index.html
@@ -36,5 +36,31 @@
             </div>
         </section>
     </nav>
+    <section class="content">
+        <header>
+            <h2>Stormy</h2>
+            <h4>with Heavy Rain</h4>
+        </header>
+        <main class="info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus blanditiis adipisci atque dolores molestias nihil saepe ut, cumque, quaerat fuga exercitationem amet accusantium mollitia fugiat non corrupti, commodi pariatur maxime!
+        </main>
+        <section class="cities">
+            <div class="city city--one">
+                <p class="temp">12<sup>o</sup></p>
+                <p class="wind">40.0NW</p>
+                <p>Kumasi</p>
+            </div>
+            <div class="city city--two">
+                <p class="temp">17<sup>o</sup></p>
+                <p class="wind">40.0NW</p>
+                <p>Sunyani</p>
+            </div>
+            <div class="city city--three">
+                <p class="temp">22<sup>o</sup></p>
+                <p class="wind">40.0NW</p>
+                <p>Tamale</p>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
