--- a/static/styles.css
+++ b/static/styles.css
@@ -1,27 +1,48 @@
+:root {
+    --clear-sky: linear-gradient(45deg, #62cff4, #2c67f2);
+    --partly-cloudy: linear-gradient(to bottom, #87CEEB, #B00C4DE);
+    --cloudy: linear-gradient(to bottom, #B0C4DE, #808080);
+    --rainy: linear-gradient(to bottom, #5F9EA0, #4682B4);
+    --stormy: linear-gradient(to bottom, #2f4f4f, #1c1c1c);
+    --snowy: linear-gradient(to bottom, #F8F8FF, #C0C0C0);
+    --foggy: linear-gradient(to bottom, #D3D3D3, #A9A9A9);
+    --dawn: linear-gradient(to bottom, #FFA07A, #FF6347, #FFD700);
+    --dusk: linear-gradient(to bottom, #2C3E50, #FD746C);
+    --night: linear-gradient(to bottom, #0F2027, #203A43, #2C5364);
+
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.image {
-    width: 100%;
-    object-fit: cover;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-}
+
 
 body {
-    background: url("./images/test.jpg") center center / cover no-repeat;
+    /* background: url("./images/test.jpg") center center / cover no-repeat; */
+    background: var(--stormy);
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);
     width: 100%;
     height: 100vh;
     font-family: 'Raleway', sans-serif;
     padding: 0 4em;
     color: #fff;
+    position: relative;
 }
 
+.weather--image {
+    width: 50em;
+    object-fit: cover;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+/* Navigation bar */
 .nav--bar {
     width: 100%;
     display: flex;
@@ -33,6 +54,11 @@ body {
 .logo {
     display: flex;
     gap: .5em;
+    align-items: center;
+}
+
+#logo {
+    width: 30px;
 }
 
 .content {
@@ -45,6 +71,7 @@ body {
 .content .content-right {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     gap: 2em;
 }
 
@@ -145,8 +172,8 @@ body {
 
 .info {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
     gap: 1em;
 }
 
@@ -154,13 +181,14 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    /* padding: .7em; */
-    border-radius: 10px;
+    border-radius: 15px;
+    border: .5px solid rgba(255, 255, 255, 0.2);
     text-align: center;
-    padding: 1em;
+    padding:0.5em 1em;
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    justify-content: space-between;
+    gap: .5em;
 }
 
 .card--flex {
@@ -168,6 +196,27 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: .5em;
+}
+
+.card--flex p {
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 1;
+}
+.card--info p:last-child {
+    font-size: .9rem;
+}
+.card--text {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-align: left;
+}
+
+.card--info {
+    display: flex;
+    flex-direction: column;
+    gap: .2em;
+    text-align: left;
 }
 
 .weather--icons {
