--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,10 @@
     <title>WIEM</title>
 </head>
 <body>
+    <img src="{{ url_for('static', filename='images/weather-icons/Storm-Night.png')}}" alt="clear day" class="weather--image"/>
     <nav class="nav--bar">
         <div class="logo">
-            <img src="#"/>
+            <img src="{{ url_for('static', filename='images/clouds.png')}}" alt="logo" id="logo"/>
             <p>Weather Station</p>
         </div>
         <div class="nav-links">
@@ -61,10 +62,6 @@
                 </div>
             </div>
             <div class="other-weather-info">
-                <div class="temp--percent">
-                        <i></i>
-                        <p>9.8%</p>
-                </div>
                 <div class="weather-type">
                     <div class="info">
                         <div class=" card humidity">
@@ -72,22 +69,59 @@
                                 <img src="{{ url_for('static', filename='images/humidity.png') }}" alt="humidity" class="weather--icons"/>
                                 <p>65%</p>
                             </div>
-                            <p>Humidity</p>
+                            <div class="card--info">
+                                <p class="card--text">Humidity</p>
+                                <p>will be 65%</p>
+                            </div>
                         </div>
                         <div class="card wind-speed">
-                            <img src="{{ url_for('static', filename='images/wind.png') }}" alt="wind speed" class="weather--icons"/>
-                            <p>10 MPH</p>
-                            <p>Wind speed</p>
+                            <div class="card--flex">
+                                <img src="{{ url_for('static', filename='images/wind.png') }}" alt="wind speed" class="weather--icons"/>
+                                <p>10MPH</p>
+                            </div>
+                            <div class="card--info">
+                                <p class="card--text">Wind speed</p>
+                                <p>will be 10MPH</p>
+                            </div>
                         </div>
                         <div class="card sunrise-sunset">
-                            <div class="sunrise">
+                            <div class="card--flex">
                                 <img src="{{ url_for('static', filename='images/sun.png') }}" alt="sun image" class="weather--icons"/>
-                                <p>06:30 AM</p>
-                                <p>Sunrise</p>
+                                <p>06:30AM</p>
                             </div>
-                            <div class="card sunset">
-                                <i></i>
-                                <p>18:30 PM</p>
+                            <div class="card--info">
+                                <p class="card--text">Sunrise</p>
+                                <p>at 6:30AM</p>
+                            </div>
+                        </div>
+                        <div class="card precipitation">
+                            <div class="card--flex">
+                                <img src="{{ url_for('static', filename='images/weather.png') }}" alt="wind speed" class="weather--icons"/>
+                                <p>10mm</p>
+                            </div>
+                            <div class="card--info">
+                                <p class="card--text">Precipitation</p>
+                                <p>will be at 10mm</p>
+                            </div>
+                        </div>
+                        <div class="card air-quality">
+                            <div class="card--flex">
+                                <img src="{{ url_for('static', filename='images/air-flow.png') }}" alt="wind speed" class="weather--icons"/>
+                                <p>10/500</p>
+                            </div>
+                            <div class="card--info">
+                                <p class="card--text">Air quality Index</p>
+                                <p>is good at 10/500</p>
+                            </div>
+                        </div>
+                        <div class="card uv-index">
+                            <div class="card--flex">
+                                <img src="{{ url_for('static', filename='images/sunburn.png') }}" alt="wind speed" class="weather--icons"/>
+                                <p>01/10</p>
+                            </div>
+                            <div class="card--info">
+                                <p class="card--text">UV index</p>
+                                <p>is very low</p>
                             </div>
                         </div>
                     </div>
