--- a/templates/index.html
+++ b/templates/index.html
@@ -11,31 +11,55 @@
     <title>WIEM</title>
 </head>
 <body>
-    <img src="{{ url_for('static', filename='images/weather-icons/Storm-Night.png')}}" alt="clear day" class="weather--image"/>
+    <img src="{{ url_for('static', filename='images/weather-icons/Day-Clear.png')}}" alt="clear day" class="weather--image"/>
     <nav class="nav--bar">
         <div class="logo">
-            <img src="{{ url_for('static', filename='images/clouds.png')}}" alt="logo" id="logo"/>
+            <img src="{{ url_for('static', filename='images/weather.png')}}" alt="logo" id="logo"/>
             <p>Weather Station</p>
         </div>
-        <div class="nav-links">
-            <p>Home</p>
-        </div>
-        <div class="time">
-            <p>09:46 AM</p>
-        </div>
-        <div class="date">
-            <p>29 Dec 2023</p>
-        </div>
-        <div class="greetings">
-            <p>Hey! Ghana</p>
-        </div>
-        <div class="search">
-            <input type="search" placeholder="type a city...">
-        </div>
+        <section class="time--date">
+            <div class="time">
+                <p>09:46 AM</p>
+            </div>
+            <div class="date">
+                <p>29 Dec 2023</p>
+            </div>
+        </section>
+        <section class="aside">
+            <div class="greetings">
+                <p>Hey! Ghana</p>
+            </div>
+            <div class="search">
+                <input type="search" placeholder="type a city...">
+            </div>
+        </section>
     </nav>
     <section class="content">
         <section class="content-left">
-
+            <header>
+                <h2>Stormy</h2>
+                <h4>with Heavy Rain</h4>
+            </header>
+            <main class="info">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus blanditiis adipisci atque dolores molestias nihil saepe ut, cumque, quaerat fuga exercitationem amet accusantium mollitia fugiat non corrupti, commodi pariatur maxime!
+            </main>
+            <section class="cities">
+                <div class="city city--one">
+                    <p class="temp">12<sup>o</sup></p>
+                    <p class="wind">40.0NW</p>
+                    <p>Kumasi</p>
+                </div>
+                <div class="city city--two">
+                    <p class="temp">17<sup>o</sup></p>
+                    <p class="wind">40.0NW</p>
+                    <p>Sunyani</p>
+                </div>
+                <div class="city city--three">
+                    <p class="temp">22<sup>o</sup></p>
+                    <p class="wind">40.0NW</p>
+                    <p>Tamale</p>
+                </div>
+            </section>
         </section>
         <section class="content-right">
             <div class="weather--data">
@@ -63,7 +87,7 @@
             </div>
             <div class="other-weather-info">
                 <div class="weather-type">
-                    <div class="info">
+                    <div class="weather-info">
                         <div class=" card humidity">
                             <div class="card--flex">
                                 <img src="{{ url_for('static', filename='images/humidity.png') }}" alt="humidity" class="weather--icons"/>
