--- a/static/styles.css
+++ b/static/styles.css
@@ -33,6 +33,47 @@ body {
     overflow: hidden;
 }
 
+.clear-sky {
+    background: var(--clear-sky);
+}
+
+.partly-cloudy {
+    background: var(--partly-cloudy);
+}
+
+.cloudy {
+    background: var(--cloudy);
+}
+
+.rainy {
+    background: var(--rainy);
+}
+
+.stormy {
+    background: var(--stormy);
+}
+
+.snowy {
+    background: var(--snowy);
+}
+
+.foggy {
+    background: var(--foggy);
+}
+
+.dawn {
+    background: var(--dawn);
+}
+
+.dusk {
+    background: var(--dusk);
+}
+
+.night {
+    background: var(--night);
+}
+
+
 .weather--image {
     width: 45em;
     object-fit: cover;
@@ -53,9 +94,11 @@ body {
 }
 
 .logo {
+    width: 100%;
     display: flex;
     gap: .5em;
     align-items: center;
+    /* border: 1px solid red; */
 }
 
 #logo {
@@ -63,11 +106,13 @@ body {
 }
 
 .time--date{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 4em;
+    /* margin-left: 4em; */
+    /* border: 1px solid red; */
 }
 
 .time--date .time{
@@ -80,23 +125,90 @@ body {
 }
 
 .aside {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1em;
+    /* border: 1px solid red; */
 }
 
 .search input {
-    width: 300px;
+    width: 100%;
     height: 40px;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 6px;
     backdrop-filter: blur(10px);
     padding: .5em;
     outline: none;
+    font-size: 16px;
     border-style: none;
     color: #fff;
     border: 1px solid rgba(255, 255, 255, 0.2);
+    /* border: 1px solid red; */
+}
+
+.dropdown-container {
+    width: 300px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 6px;
+    backdrop-filter: blur(10px);
+    width: 100%;
+    border: 1px solid #ccc;
+    z-index: 1;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.dropdown-content a {
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    color: #fff;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Background of the scrollbar */
+::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px); 
+}
+
+/* Scrollbar handle */
+::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+    border: 2px solid #f1f1f1;
+}
+
+/* Hover effect on scrollbar */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.dropdown-content a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(15px);
+}
+
+.show {
+    display: block;
+}
+
+#weatherInfo {
+    margin-top: 20px;
 }
 
 /* Content styles */
@@ -141,6 +253,11 @@ body {
 .content .content-left {
     width: 100%;
     /* border: 1px solid blue; */
+}
+
+.description--weather {
+    width: 70%;
+    text-align: justify;
 }
 
 .content .content-right {
