--- a/templates/weather_twi.html
+++ b/templates/weather_twi.html
@@ -55,21 +55,13 @@
                 {{description}}
             </main>
             <section class="cities">
-                <div class="city city--one">
-                    <p class="temp">12<sup>o</sup></p>
-                    <p class="wind">40.0NW</p>
-                    <p>Kumasi</p>
+                {% for city_weather in cities_weather %}
+                <div class="city">
+                    <p class="temp">{{ city_weather.temperature }}°C</p>
+                    <p class="wind">{{ city_weather.wind_direction }}</p>
+                    <p>{{ city_weather.city }}</p>
                 </div>
-                <div class="city city--two">
-                    <p class="temp">17<sup>o</sup></p>
-                    <p class="wind">40.0NW</p>
-                    <p>Sunyani</p>
-                </div>
-                <div class="city city--three">
-                    <p class="temp">22<sup>o</sup></p>
-                    <p class="wind">40.0NW</p>
-                    <p>Tamale</p>
-                </div>
+                {% endfor %}
             </section>
         </section>
         <section class="content-right">
